# batchi

./: .gitignore  .gitmodules  Cargo.toml  batchi-b636b32da52a42a8.js  batchi-b636b32da52a42a8_bg.wasm  batmonic-543dda106c4733e3.js  batmonic-af7c48d3be5863b.js  build.rs  gh-release.sh  index.html  oversample-5adb54d283b013d9.js  oversample-9365ec97481a072.js  style-21d3b3e996882c82.css  style-5fc8d508bf75ee03.css  style-8d4da6b042ac4653.css  style.css
.cargo/: config.toml
.claude/: settings.local.json
docs/: batchi-19a76fa602c711ca.js  batchi-19a76fa602c711ca_bg.wasm  batchi-219e660310bc1081.js  batchi-219e660310bc1081_bg.wasm  batchi-3c04f18fca6657d8.js  batchi-3c04f18fca6657d8_bg.wasm  batchi-3da3f74fee14f929.js  batchi-3da3f74fee14f929_bg.wasm  batchi-43c3046259a192da.js  batchi-43c3046259a192da_bg.wasm  batchi-6a33e64ea4ab4df5.js  batchi-6a33e64ea4ab4df5_bg.wasm  batchi-6c561823be0d0869.js  batchi-6c561823be0d0869_bg.wasm  batchi-7b9eb114be85013.js  batchi-7b9eb114be85013_bg.wasm  batchi-9c8270779f1aaf7a.js  batchi-9c8270779f1aaf7a_bg.wasm  batchi-c1ce11e336d46a07.js  batchi-c1ce11e336d46a07_bg.wasm  batchi-d3e0c194a0cd251f.js  batchi-d3e0c194a0cd251f_bg.wasm  batchi-eb20e0796744d6ce.js  batchi-eb20e0796744d6ce_bg.wasm  batchi-fb80f25f4e873e45.js  batchi-fb80f25f4e873e45_bg.wasm  index.html  style-2d52fd76f0e69bcf.css  style-3175fc1ad2674077.css  style-3d696109d1d9af4f.css  style-5431bac85017c996.css  style-c314120848aa71be.css  style-ecbc730cb059738c.css  style-fb664a87d2b4c895.css
oversample-core/: Cargo.toml
src/: annotations.rs  file_identity.rs  focus_stack.rs  lib.rs  opfs.rs  project.rs  project_store.rs  state.rs  tauri_bridge.rs  timeline.rs  types.rs  viewport.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_decode.rs  cmd_mic.rs  cmd_usb.rs  lib.rs  main.rs  native_playback.rs  recording.rs  recovery.rs  usb_audio.rs  xc.rs
xc-cli/: Cargo.toml
xc-lib/: Cargo.toml
(+106 files in other folders)
