[package]
name = "batchi-desktop"
version = "0.1.4"
edition = "2021"

[lib]
name = "batchi_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
claxon = "0.4"
lewton = "0.10"
symphonia = { version = "0.5", default-features = false, features = ["mp3"] }
chrono = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
